maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:22: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime1.PledgeMaze
  while (getDirection != direction.NORTH) {
                         ^PledgeMaze:71: error: too many arguments for method northRunnerMode: ()Unit
    sumTurns = northRunnerMode(sumTurns);
                              ^